// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     total of 
    $5.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 2`] = `
<div>
  <h1>
    Viewing 
    15
     
    expenses
     total of 
    $5,034,523.10
  </h1>
</div>
`;
